A......... [ZBX-3783] prohibited deleting discovery rules which are used in actions (Sasha)
A......... [ZBX-3783] added audit for action.delete() and correlation.delete() methods (Sasha)
..F....... [ZBXNEXT-4143] implemented submenu autofocus on top-level menu click (nikita)
..F....... [ZBXNEXT-4414] added support for configurable number of displayed tags (agriscenko)

Bug fixes:
..F....... [ZBX-13749] fixed creation of dependent items from item wizard (vjaceslavs)
...G...PS. [ZBX-13660] fixed data types passed to is_ushort() for converting PID, port and process number (Andris)
..F....... [ZBX-12935,ZBX-13539] fixed displaying of floating point values under the "Latest data" page (Sasha)
...G...PS. [ZBX-13579] fixed unnecessary data getting when agent becomes available in the non-collection data period (Sergejs)
..F....... [ZBX-13240] removed duplicating HTML IDs from frontend and fixed SID validation in trigger wizard (Ivo)
..F....... [ZBX-13685] fixed maintenance entries displayed in list when filter is applied (agriscenko)
....I..... [ZBX-12756] improved configure script to check iconv library (MVekslers)
........S. [ZBX-13667] added notification in zabbix server log about 'error' in elasticsearch json response (MVekslers)
..F....... [ZBX-13683] fixed multiselect items not being sorted by name (agriscenko)
........S. [ZBX-13299] fixed autoregistration, discovery and internal notifications not being sent due to uninitialized severity (vso)
....I..... [ZBX-13607] changed ping script to return success also for timeouts (wiper)
..F....... [ZBX-12967] fixed slide show refresh interval multiplier menu not working (agriscenko)
........S. [ZBX-13696] added maximum record limit to old session removal in housekeeper (wiper)
..F....... [ZBX-13642] fixed undefined index in user edit form (agriscenko)
..F....... [ZBX-13546] fixed context menu positioning in maps (gcalenko, miks)