@@ -16,6 +16,7 @@ A......... [ZBX-3783] added audit for action.delete() and correlation.delete() m
 ..F....... [ZBXNEXT-4414] added support for configurable number of displayed tags (agriscenko)
 
 Bug fixes:
+...G...... [ZBX-12805] increased command line limit for proc.num checks on hp-ux systems (Andris, wiper)
 ..F....... [ZBX-13749] fixed creation of dependent items from item wizard (vjaceslavs)
 ...G...PS. [ZBX-13660] fixed data types passed to is_ushort() for converting PID, port and process number (Andris)
 ..F....... [ZBX-12935,ZBX-13539] fixed displaying of floating point values under the "Latest data" page (Sasha)
@@ -254,6 +255,7 @@ Changes for 3.4.9rc1
 New features:
 
 Bug fixes:
+...G...... [ZBX-12805] increased command line limit for proc.num checks on hp-ux systems (Andris, wiper)
 ...G...PS. [ZBX-13660] fixed data types passed to is_ushort() for converting PID, port and process number (Andris)
 ..F....... [ZBX-12935,ZBX-13539] fixed displaying of floating point values under the "Latest data" page (Sasha)
 ...G...PS. [ZBX-13579] fixed unnecessary data getting when agent becomes available in the non-collection data period (Sergejs)
